# packaging_tut

./: README.md  setup.cfg
src/pkl_files_handler.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pkl_handler/: __init__.py  loading_pkl.py
